--- a/admin-landing.html
+++ b/admin-landing.html
@@ -143,7 +143,7 @@
       <a href="" target="_blank">
       <i class="fab fa-instagram"></i>
       </a>
-      <a href="" target="_blank">
+      <a href="https://www.youtube.com/channel/UCsGp2q5PC4i9zuOgx850fbQ" target="_blank">
         <i class="fab fa-youtube"></i>
       </a>
     </div>
