--- a/category.html
+++ b/category.html
@@ -169,7 +169,7 @@
       <a href="" target="_blank">
       <i class="fab fa-instagram"></i>
       </a>
-      <a href="" target="_blank">
+      <a href="https://www.youtube.com/channel/UCsGp2q5PC4i9zuOgx850fbQ" target="_blank">
         <i class="fab fa-youtube"></i>
       </a>
     </div>
@@ -235,7 +235,7 @@ function setCookie(cname, cvalue, exdays) {
 
     $(function() {
   $(document).ready(function() {
-      let category = getCookie("category");
+      let category = getCookie("category").toLowerCase();
       console.log(category);
       console.log(captions[0]);
       console.log(summaryContainer[0]);
