--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         </div>
       </nav>
       <hr id="nav-border">
-    <div id="top-stories"><div id="subject-container">
+    <div id="top-stories"><span style="display: none;" id="id-store-1"></span>
+      <div id="subject-container">
           <h1 id="subject">
            Welcome to ANF-tv Official website
           </h1>
@@ -287,7 +288,7 @@
     function storeId(data, container) {
       let span = document.createElement('span');
       span.style.display = "none";
-      span.id = data.id;
+      // span.id = data.id;
       span.innerHTML = data.id;
       container.insertBefore(span, container.childNodes[0])
     };
@@ -336,12 +337,13 @@
         setInterval(() => {
           let mediaType = checkMediaType(topStories[current].media);
           // console.log(checkMediaType(topStories[current].media));
-          let idStore = document.getElementById('id-store');
-          if (topStorySlides.firstChild.nodeName == "span") {
-            idStore.innerHTML = topStories[current].id;
-          } else {
-            storeId(topStories[current], topStorySlides);
-          };
+          let idStore = document.getElementById('id-store-1');
+          // if (topStorySlides.firstChild.nodeName == "span") {
+          //   idStore.innerHTML = topStories[current].id;
+          // } else {
+            // storeId(topStories[current], topStorySlides);
+          // };
+          idStore.innerHTML = topStories[current].id;
           sub.innerHTML = shortenStr(topStories[current].subject, 40);
           if (mediaType == "video") {
               img.style.display = "none";
