--- a/admin-login.html
+++ b/admin-login.html
@@ -90,7 +90,7 @@ $(function() {
         type: "POST",
         contentType: "application/json",
         dataType: "json",
-        url: 'https://anf-tv.herokuapp.com/users/sign-in',
+        url: 'https://anf-tv-app.herokuapp.com/users/signin',
         data: loginData,
         processData: false,
         success: function (response) {
