--- a/category.html
+++ b/category.html
@@ -243,7 +243,7 @@ function setCookie(cname, cvalue, exdays) {
 
       $.ajax({
         type: "GET",
-        url: `https://anf-tv.herokuapp.com/news/${category}/1`,
+        url: `https://anf-tv-app.herokuapp.com/news/${category}/1`,
 
 
         success: function (response) {
@@ -281,8 +281,8 @@ $('.summary, .summary-media, .caption').on("click", function() {
       let span = $(this).children()[0].innerHTML;
       // console.log(span);
       $.ajax({
-        type: "POST",
-        url: `https://anf-tv.herokuapp.com/news/get/${span}`,
+        type: "GET",
+        url: `https://anf-tv-app.herokuapp.com/news/${span}`,
         success: function(response) {
           // console.log(response.category);
           sessionStorage.setItem('clickedNews', JSON.stringify(response));
